# venumLang2

./: .gitignore  LICENSE  README.MD  README.md  client.vlang  executor.py  main.py  main.vlang  process.py  requirements.txt  setup.cfg  setup.py  test.py  tokens.py  type_checker.py
compilerv1/executing/: __init__.py
compilerv1/preprocessing/: __init__.py
compilerv2/: README.MD  grammar.txt  main.vlang  output  output.asm  readme.txt  run_file.py
compilerv2/compiler/: compiler.py  environment.py
compilerv2/parsing/: expressions.py  parser.py  statements.py
compilerv2/scanning/: lexer.py
compilerv2/visitors/: ast_printer.py  visitor.py
examples/: client.vlang  config.toml  file_io.vlang  home.html  main.vlang  nested_import.vlang  other_file.vlang  output  output.asm  testsyslib.vlang
examples/lenaOpdracht/: lena.vlang
examples/stdlib/: io.vlang  libsyscall.vlang  network.vlang  string.vlang  sys.vlang
interpreterv1/: grammar.txt  main.py  run_file.py
interpreterv1/parsing/: statements.py
interpreterv1/visitors/: rpn_printer.py  visitor.py
lox/: chunk.c  chunk.h  common.h  compiler.h  debug.c  main  main.c  memory.c  memory.h  vm.c  vm.h
src/: .gitignore  config_options.py  grammar.txt  main.py  main.vlang  other_file.vlang  output  output.asm  parse_file.py  run_file.py  setup.cfg  setup.py
stdlib/: io.vlang  libsyscall.vlang  string.vlang
test/: printbuf.c
testing/: print
tests/: arithmetics  functions  hello  std_string
venumlang/: __init__.py  grammar.txt  parse_file.py
venumlang3/: grammar.txt  main.py  run_file.py
(+85 files in other folders)
