[metadata]
name = Venumlang
description = A statically typed language written in python
version = 1
author = Venumlang contributors
license_files = file: ./LICENSE
long-description = file: ./README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/darealvenum/venumLang2
platforms = any
classifiers =
    Programming Language :: Python :: 3

[options]
scripts = main.py
python_requires = >= 3.8
packages =
    compiler
    intermediate
    parsing
    preproccesor
    scanning
    visitors

[options.entry_points]
console_scripts =
    venumlang = main:main